--- a/res/layout/contact_layout.xml
+++ b/res/layout/contact_layout.xml
@@ -1,70 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/contact_grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
-
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="103dp"
-        android:layout_column="0"
-        android:layout_row="0" />
-
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="27dp"
-        android:layout_column="0"
-        android:layout_row="1" />
-
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="223dp"
-        android:layout_column="0"
-        android:layout_row="2" />
-
-    <Space
-        android:layout_width="1dp"
-        android:layout_height="151dp"
-        android:layout_column="0"
-        android:layout_row="3" />
-
-    <Space
-        android:layout_width="32dp"
-        android:layout_height="1dp"
-        android:layout_column="0"
-        android:layout_row="0" />
 
     <include
         android:id="@+id/myBadge"
         android:layout_width="250dp"
         android:layout_height="104dp"
-        android:layout_column="1"
-        android:layout_gravity="left|bottom"
-        android:layout_row="0"
-        android:layout_rowSpan="2"
+        android:layout_marginTop="25dp"
         layout="@layout/contact_badge" />
 
     <ImageButton
         android:id="@+id/qrcode"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_column="1"
-        android:layout_gravity="left"
-        android:layout_row="2"
-        android:layout_rowSpan="2"
+        android:layout_marginTop="15dp"
         android:contentDescription="@string/contact_qr_code" />
 
-    <Space
-        android:layout_width="13dp"
-        android:layout_height="1dp"
-        android:layout_column="1"
-        android:layout_row="0" />
-
-    <Space
-        android:layout_width="274dp"
-        android:layout_height="1dp"
-        android:layout_column="2"
-        android:layout_row="0" />
-
-</GridLayout>
+</LinearLayout>
