--- a/res/layout-port/resume_layout.xml
+++ b/res/layout-port/resume_layout.xml
@@ -20,7 +20,7 @@
                 android:layout_columnSpan="2"
                 android:layout_gravity="left"
                 android:layout_row="0"
-                android:text="@string/sony_game"
+                android:text="TEST"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
